--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,7 @@
       "128": "images/todo.png"
     }
   },
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "icons": {
     "16": "images/todo.png",
     "32": "images/todo.png",
